// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TableQL> column custom sort 1`] = `
<table
  class="TableQL"
>
  <thead
    class="TableQL-thead"
  >
    <tr
      class="TableQL-tr"
    >
      <th
        class="TableQL-thead-th  TableQL-thead-th-sort"
      >
        Title
      </th>
      <th
        class="TableQL-thead-th  "
      >
        Episode ID
      </th>
      <th
        class="TableQL-thead-th  "
      >
        Opening Crawl
      </th>
      <th
        class="TableQL-thead-th  "
      >
        Director
      </th>
      <th
        class="TableQL-thead-th  "
      >
        Producer
      </th>
      <th
        class="TableQL-thead-th  "
      >
        Release Date
      </th>
    </tr>
  </thead>
  <tbody
    class="TableQL-tbody"
  >
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        The Force Awakens
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        7
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Luke Skywalker has vanished.
In his absence, the sinister
FIRST ORDER has risen from
the ashes of the Empire
and will not rest until
Skywalker, the last Jedi,
has been destroyed.
 
With the support of the
REPUBLIC, General Leia Organa
leads a brave RESISTANCE.
She is desperate to find her
brother Luke and gain his
help in restoring peace and
justice to the galaxy.
 
Leia has sent her most daring
pilot on a secret mission
to Jakku, where an old ally
has discovered a clue to
Luke's whereabouts....
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        J. J. Abrams
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Kathleen Kennedy, J. J. Abrams, Bryan Burk
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        2015-12-11
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        The Empire Strikes Back
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        5
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        It is a dark time for the
Rebellion. Although the Death
Star has been destroyed,
Imperial troops have driven the
Rebel forces from their hidden
base and pursued them across
the galaxy.

Evading the dreaded Imperial
Starfleet, a group of freedom
fighters led by Luke Skywalker
has established a new secret
base on the remote ice world
of Hoth.

The evil lord Darth Vader,
obsessed with finding young
Skywalker, has dispatched
thousands of remote probes into
the far reaches of space....
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Irvin Kershner
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Gary Kurtz, Rick McCallum
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        1980-05-17
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        Return of the Jedi
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        6
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Luke Skywalker has returned to
his home planet of Tatooine in
an attempt to rescue his
friend Han Solo from the
clutches of the vile gangster
Jabba the Hutt.

Little does Luke know that the
GALACTIC EMPIRE has secretly
begun construction on a new
armored space station even
more powerful than the first
dreaded Death Star.

When completed, this ultimate
weapon will spell certain doom
for the small band of rebels
struggling to restore freedom
to the galaxy...
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Richard Marquand
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Howard G. Kazanjian, George Lucas, Rick McCallum
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        1983-05-25
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        Revenge of the Sith
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        3
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        War! The Republic is crumbling
under attacks by the ruthless
Sith Lord, Count Dooku.
There are heroes on both sides.
Evil is everywhere.

In a stunning move, the
fiendish droid leader, General
Grievous, has swept into the
Republic capital and kidnapped
Chancellor Palpatine, leader of
the Galactic Senate.

As the Separatist Droid Army
attempts to flee the besieged
capital with their valuable
hostage, two Jedi Knights lead a
desperate mission to rescue the
captive Chancellor....
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        George Lucas
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Rick McCallum
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        2005-05-19
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        The Phantom Menace
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        1
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Turmoil has engulfed the
Galactic Republic. The taxation
of trade routes to outlying star
systems is in dispute.

Hoping to resolve the matter
with a blockade of deadly
battleships, the greedy Trade
Federation has stopped all
shipping to the small planet
of Naboo.

While the Congress of the
Republic endlessly debates
this alarming chain of events,
the Supreme Chancellor has
secretly dispatched two Jedi
Knights, the guardians of
peace and justice in the
galaxy, to settle the conflict....
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        George Lucas
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Rick McCallum
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        1999-05-19
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        Attack of the Clones
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        2
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        There is unrest in the Galactic
Senate. Several thousand solar
systems have declared their
intentions to leave the Republic.

This separatist movement,
under the leadership of the
mysterious Count Dooku, has
made it difficult for the limited
number of Jedi Knights to maintain 
peace and order in the galaxy.

Senator Amidala, the former
Queen of Naboo, is returning
to the Galactic Senate to vote
on the critical issue of creating
an ARMY OF THE REPUBLIC
to assist the overwhelmed
Jedi....
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        George Lucas
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Rick McCallum
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        2002-05-16
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        A New Hope
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        4
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        It is a period of civil war.
Rebel spaceships, striking
from a hidden base, have won
their first victory against
the evil Galactic Empire.

During the battle, Rebel
spies managed to steal secret
plans to the Empire's
ultimate weapon, the DEATH
STAR, an armored space
station with enough power
to destroy an entire planet.

Pursued by the Empire's
sinister agents, Princess
Leia races home aboard her
starship, custodian of the
stolen plans that can save her
people and restore
freedom to the galaxy....
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        George Lucas
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Gary Kurtz, Rick McCallum
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        1977-05-25
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableQL> column sort 1`] = `
<table
  class="TableQL"
>
  <thead
    class="TableQL-thead"
  >
    <tr
      class="TableQL-tr"
    >
      <th
        class="TableQL-thead-th  TableQL-thead-th-sort"
      >
        Title
      </th>
      <th
        class="TableQL-thead-th  "
      >
        Episode ID
      </th>
      <th
        class="TableQL-thead-th  "
      >
        Opening Crawl
      </th>
      <th
        class="TableQL-thead-th  "
      >
        Director
      </th>
      <th
        class="TableQL-thead-th  "
      >
        Producer
      </th>
      <th
        class="TableQL-thead-th  "
      >
        Release Date
      </th>
    </tr>
  </thead>
  <tbody
    class="TableQL-tbody"
  >
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        A New Hope
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        4
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        It is a period of civil war.
Rebel spaceships, striking
from a hidden base, have won
their first victory against
the evil Galactic Empire.

During the battle, Rebel
spies managed to steal secret
plans to the Empire's
ultimate weapon, the DEATH
STAR, an armored space
station with enough power
to destroy an entire planet.

Pursued by the Empire's
sinister agents, Princess
Leia races home aboard her
starship, custodian of the
stolen plans that can save her
people and restore
freedom to the galaxy....
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        George Lucas
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Gary Kurtz, Rick McCallum
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        1977-05-25
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        Attack of the Clones
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        2
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        There is unrest in the Galactic
Senate. Several thousand solar
systems have declared their
intentions to leave the Republic.

This separatist movement,
under the leadership of the
mysterious Count Dooku, has
made it difficult for the limited
number of Jedi Knights to maintain 
peace and order in the galaxy.

Senator Amidala, the former
Queen of Naboo, is returning
to the Galactic Senate to vote
on the critical issue of creating
an ARMY OF THE REPUBLIC
to assist the overwhelmed
Jedi....
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        George Lucas
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Rick McCallum
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        2002-05-16
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        Return of the Jedi
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        6
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Luke Skywalker has returned to
his home planet of Tatooine in
an attempt to rescue his
friend Han Solo from the
clutches of the vile gangster
Jabba the Hutt.

Little does Luke know that the
GALACTIC EMPIRE has secretly
begun construction on a new
armored space station even
more powerful than the first
dreaded Death Star.

When completed, this ultimate
weapon will spell certain doom
for the small band of rebels
struggling to restore freedom
to the galaxy...
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Richard Marquand
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Howard G. Kazanjian, George Lucas, Rick McCallum
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        1983-05-25
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        Revenge of the Sith
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        3
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        War! The Republic is crumbling
under attacks by the ruthless
Sith Lord, Count Dooku.
There are heroes on both sides.
Evil is everywhere.

In a stunning move, the
fiendish droid leader, General
Grievous, has swept into the
Republic capital and kidnapped
Chancellor Palpatine, leader of
the Galactic Senate.

As the Separatist Droid Army
attempts to flee the besieged
capital with their valuable
hostage, two Jedi Knights lead a
desperate mission to rescue the
captive Chancellor....
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        George Lucas
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Rick McCallum
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        2005-05-19
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        The Empire Strikes Back
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        5
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        It is a dark time for the
Rebellion. Although the Death
Star has been destroyed,
Imperial troops have driven the
Rebel forces from their hidden
base and pursued them across
the galaxy.

Evading the dreaded Imperial
Starfleet, a group of freedom
fighters led by Luke Skywalker
has established a new secret
base on the remote ice world
of Hoth.

The evil lord Darth Vader,
obsessed with finding young
Skywalker, has dispatched
thousands of remote probes into
the far reaches of space....
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Irvin Kershner
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Gary Kurtz, Rick McCallum
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        1980-05-17
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        The Force Awakens
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        7
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Luke Skywalker has vanished.
In his absence, the sinister
FIRST ORDER has risen from
the ashes of the Empire
and will not rest until
Skywalker, the last Jedi,
has been destroyed.
 
With the support of the
REPUBLIC, General Leia Organa
leads a brave RESISTANCE.
She is desperate to find her
brother Luke and gain his
help in restoring peace and
justice to the galaxy.
 
Leia has sent her most daring
pilot on a secret mission
to Jakku, where an old ally
has discovered a clue to
Luke's whereabouts....
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        J. J. Abrams
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Kathleen Kennedy, J. J. Abrams, Bryan Burk
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        2015-12-11
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        The Phantom Menace
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        1
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Turmoil has engulfed the
Galactic Republic. The taxation
of trade routes to outlying star
systems is in dispute.

Hoping to resolve the matter
with a blockade of deadly
battleships, the greedy Trade
Federation has stopped all
shipping to the small planet
of Naboo.

While the Congress of the
Republic endlessly debates
this alarming chain of events,
the Supreme Chancellor has
secretly dispatched two Jedi
Knights, the guardians of
peace and justice in the
galaxy, to settle the conflict....
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        George Lucas
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Rick McCallum
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        1999-05-19
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableQL> custom error message 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <p>
        Hey I am an Error!
      </p>
    </div>
  </body>,
  "container": <div>
    <p>
      Hey I am an Error!
    </p>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<TableQL> debug mode 1`] = `
<table
  class="TableQL"
>
  <thead
    class="TableQL-thead"
  >
    <tr
      class="TableQL-tr"
    >
      <th
        class="TableQL-thead-th  "
      >
        Title
      </th>
      <th
        class="TableQL-thead-th  "
      >
        Episode ID
      </th>
      <th
        class="TableQL-thead-th  "
      >
        Opening Crawl
      </th>
      <th
        class="TableQL-thead-th  "
      >
        Director
      </th>
      <th
        class="TableQL-thead-th  "
      >
        Producer
      </th>
      <th
        class="TableQL-thead-th  "
      >
        Release Date
      </th>
    </tr>
  </thead>
  <tbody
    class="TableQL-tbody"
  >
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        A New Hope
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        4
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        It is a period of civil war.
Rebel spaceships, striking
from a hidden base, have won
their first victory against
the evil Galactic Empire.

During the battle, Rebel
spies managed to steal secret
plans to the Empire's
ultimate weapon, the DEATH
STAR, an armored space
station with enough power
to destroy an entire planet.

Pursued by the Empire's
sinister agents, Princess
Leia races home aboard her
starship, custodian of the
stolen plans that can save her
people and restore
freedom to the galaxy....
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        George Lucas
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Gary Kurtz, Rick McCallum
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        1977-05-25
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        Attack of the Clones
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        2
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        There is unrest in the Galactic
Senate. Several thousand solar
systems have declared their
intentions to leave the Republic.

This separatist movement,
under the leadership of the
mysterious Count Dooku, has
made it difficult for the limited
number of Jedi Knights to maintain 
peace and order in the galaxy.

Senator Amidala, the former
Queen of Naboo, is returning
to the Galactic Senate to vote
on the critical issue of creating
an ARMY OF THE REPUBLIC
to assist the overwhelmed
Jedi....
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        George Lucas
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Rick McCallum
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        2002-05-16
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        The Phantom Menace
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        1
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Turmoil has engulfed the
Galactic Republic. The taxation
of trade routes to outlying star
systems is in dispute.

Hoping to resolve the matter
with a blockade of deadly
battleships, the greedy Trade
Federation has stopped all
shipping to the small planet
of Naboo.

While the Congress of the
Republic endlessly debates
this alarming chain of events,
the Supreme Chancellor has
secretly dispatched two Jedi
Knights, the guardians of
peace and justice in the
galaxy, to settle the conflict....
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        George Lucas
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Rick McCallum
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        1999-05-19
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        Revenge of the Sith
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        3
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        War! The Republic is crumbling
under attacks by the ruthless
Sith Lord, Count Dooku.
There are heroes on both sides.
Evil is everywhere.

In a stunning move, the
fiendish droid leader, General
Grievous, has swept into the
Republic capital and kidnapped
Chancellor Palpatine, leader of
the Galactic Senate.

As the Separatist Droid Army
attempts to flee the besieged
capital with their valuable
hostage, two Jedi Knights lead a
desperate mission to rescue the
captive Chancellor....
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        George Lucas
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Rick McCallum
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        2005-05-19
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        Return of the Jedi
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        6
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Luke Skywalker has returned to
his home planet of Tatooine in
an attempt to rescue his
friend Han Solo from the
clutches of the vile gangster
Jabba the Hutt.

Little does Luke know that the
GALACTIC EMPIRE has secretly
begun construction on a new
armored space station even
more powerful than the first
dreaded Death Star.

When completed, this ultimate
weapon will spell certain doom
for the small band of rebels
struggling to restore freedom
to the galaxy...
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Richard Marquand
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Howard G. Kazanjian, George Lucas, Rick McCallum
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        1983-05-25
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        The Empire Strikes Back
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        5
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        It is a dark time for the
Rebellion. Although the Death
Star has been destroyed,
Imperial troops have driven the
Rebel forces from their hidden
base and pursued them across
the galaxy.

Evading the dreaded Imperial
Starfleet, a group of freedom
fighters led by Luke Skywalker
has established a new secret
base on the remote ice world
of Hoth.

The evil lord Darth Vader,
obsessed with finding young
Skywalker, has dispatched
thousands of remote probes into
the far reaches of space....
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Irvin Kershner
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Gary Kurtz, Rick McCallum
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        1980-05-17
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        The Force Awakens
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        7
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Luke Skywalker has vanished.
In his absence, the sinister
FIRST ORDER has risen from
the ashes of the Empire
and will not rest until
Skywalker, the last Jedi,
has been destroyed.
 
With the support of the
REPUBLIC, General Leia Organa
leads a brave RESISTANCE.
She is desperate to find her
brother Luke and gain his
help in restoring peace and
justice to the galaxy.
 
Leia has sent her most daring
pilot on a secret mission
to Jakku, where an old ally
has discovered a clue to
Luke's whereabouts....
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        J. J. Abrams
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Kathleen Kennedy, J. J. Abrams, Bryan Burk
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        2015-12-11
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableQL> default snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <table
        class="TableQL"
      >
        <thead
          class="TableQL-thead"
        >
          <tr
            class="TableQL-tr"
          >
            <th
              class="TableQL-thead-th  "
            >
              Title
            </th>
            <th
              class="TableQL-thead-th  "
            >
              Episode ID
            </th>
            <th
              class="TableQL-thead-th  "
            >
              Opening Crawl
            </th>
            <th
              class="TableQL-thead-th  "
            >
              Director
            </th>
            <th
              class="TableQL-thead-th  "
            >
              Producer
            </th>
            <th
              class="TableQL-thead-th  "
            >
              Release Date
            </th>
          </tr>
        </thead>
        <tbody
          class="TableQL-tbody"
        >
          <tr
            class="TableQL-tr"
          >
            <td
              class="
            TableQL-td
            
            "
            >
              A New Hope
            </td>
            <td
              class="
            TableQL-td
            
            "
            >
              4
            </td>
            <td
              class="
            TableQL-td
            
            "
            >
              It is a period of civil war.
Rebel spaceships, striking
from a hidden base, have won
their first victory against
the evil Galactic Empire.

During the battle, Rebel
spies managed to steal secret
plans to the Empire's
ultimate weapon, the DEATH
STAR, an armored space
station with enough power
to destroy an entire planet.

Pursued by the Empire's
sinister agents, Princess
Leia races home aboard her
starship, custodian of the
stolen plans that can save her
people and restore
freedom to the galaxy....
            </td>
            <td
              class="
            TableQL-td
            
            "
            >
              George Lucas
            </td>
            <td
              class="
            TableQL-td
            
            "
            >
              Gary Kurtz, Rick McCallum
            </td>
            <td
              class="
            TableQL-td
            
            "
            >
              1977-05-25
            </td>
          </tr>
          <tr
            class="TableQL-tr"
          >
            <td
              class="
            TableQL-td
            
            "
            >
              Attack of the Clones
            </td>
            <td
              class="
            TableQL-td
            
            "
            >
              2
            </td>
            <td
              class="
            TableQL-td
            
            "
            >
              There is unrest in the Galactic
Senate. Several thousand solar
systems have declared their
intentions to leave the Republic.

This separatist movement,
under the leadership of the
mysterious Count Dooku, has
made it difficult for the limited
number of Jedi Knights to maintain 
peace and order in the galaxy.

Senator Amidala, the former
Queen of Naboo, is returning
to the Galactic Senate to vote
on the critical issue of creating
an ARMY OF THE REPUBLIC
to assist the overwhelmed
Jedi....
            </td>
            <td
              class="
            TableQL-td
            
            "
            >
              George Lucas
            </td>
            <td
              class="
            TableQL-td
            
            "
            >
              Rick McCallum
            </td>
            <td
              class="
            TableQL-td
            
            "
            >
              2002-05-16
            </td>
          </tr>
          <tr
            class="TableQL-tr"
          >
            <td
              class="
            TableQL-td
            
            "
            >
              The Phantom Menace
            </td>
            <td
              class="
            TableQL-td
            
            "
            >
              1
            </td>
            <td
              class="
            TableQL-td
            
            "
            >
              Turmoil has engulfed the
Galactic Republic. The taxation
of trade routes to outlying star
systems is in dispute.

Hoping to resolve the matter
with a blockade of deadly
battleships, the greedy Trade
Federation has stopped all
shipping to the small planet
of Naboo.

While the Congress of the
Republic endlessly debates
this alarming chain of events,
the Supreme Chancellor has
secretly dispatched two Jedi
Knights, the guardians of
peace and justice in the
galaxy, to settle the conflict....
            </td>
            <td
              class="
            TableQL-td
            
            "
            >
              George Lucas
            </td>
            <td
              class="
            TableQL-td
            
            "
            >
              Rick McCallum
            </td>
            <td
              class="
            TableQL-td
            
            "
            >
              1999-05-19
            </td>
          </tr>
          <tr
            class="TableQL-tr"
          >
            <td
              class="
            TableQL-td
            
            "
            >
              Revenge of the Sith
            </td>
            <td
              class="
            TableQL-td
            
            "
            >
              3
            </td>
            <td
              class="
            TableQL-td
            
            "
            >
              War! The Republic is crumbling
under attacks by the ruthless
Sith Lord, Count Dooku.
There are heroes on both sides.
Evil is everywhere.

In a stunning move, the
fiendish droid leader, General
Grievous, has swept into the
Republic capital and kidnapped
Chancellor Palpatine, leader of
the Galactic Senate.

As the Separatist Droid Army
attempts to flee the besieged
capital with their valuable
hostage, two Jedi Knights lead a
desperate mission to rescue the
captive Chancellor....
            </td>
            <td
              class="
            TableQL-td
            
            "
            >
              George Lucas
            </td>
            <td
              class="
            TableQL-td
            
            "
            >
              Rick McCallum
            </td>
            <td
              class="
            TableQL-td
            
            "
            >
              2005-05-19
            </td>
          </tr>
          <tr
            class="TableQL-tr"
          >
            <td
              class="
            TableQL-td
            
            "
            >
              Return of the Jedi
            </td>
            <td
              class="
            TableQL-td
            
            "
            >
              6
            </td>
            <td
              class="
            TableQL-td
            
            "
            >
              Luke Skywalker has returned to
his home planet of Tatooine in
an attempt to rescue his
friend Han Solo from the
clutches of the vile gangster
Jabba the Hutt.

Little does Luke know that the
GALACTIC EMPIRE has secretly
begun construction on a new
armored space station even
more powerful than the first
dreaded Death Star.

When completed, this ultimate
weapon will spell certain doom
for the small band of rebels
struggling to restore freedom
to the galaxy...
            </td>
            <td
              class="
            TableQL-td
            
            "
            >
              Richard Marquand
            </td>
            <td
              class="
            TableQL-td
            
            "
            >
              Howard G. Kazanjian, George Lucas, Rick McCallum
            </td>
            <td
              class="
            TableQL-td
            
            "
            >
              1983-05-25
            </td>
          </tr>
          <tr
            class="TableQL-tr"
          >
            <td
              class="
            TableQL-td
            
            "
            >
              The Empire Strikes Back
            </td>
            <td
              class="
            TableQL-td
            
            "
            >
              5
            </td>
            <td
              class="
            TableQL-td
            
            "
            >
              It is a dark time for the
Rebellion. Although the Death
Star has been destroyed,
Imperial troops have driven the
Rebel forces from their hidden
base and pursued them across
the galaxy.

Evading the dreaded Imperial
Starfleet, a group of freedom
fighters led by Luke Skywalker
has established a new secret
base on the remote ice world
of Hoth.

The evil lord Darth Vader,
obsessed with finding young
Skywalker, has dispatched
thousands of remote probes into
the far reaches of space....
            </td>
            <td
              class="
            TableQL-td
            
            "
            >
              Irvin Kershner
            </td>
            <td
              class="
            TableQL-td
            
            "
            >
              Gary Kurtz, Rick McCallum
            </td>
            <td
              class="
            TableQL-td
            
            "
            >
              1980-05-17
            </td>
          </tr>
          <tr
            class="TableQL-tr"
          >
            <td
              class="
            TableQL-td
            
            "
            >
              The Force Awakens
            </td>
            <td
              class="
            TableQL-td
            
            "
            >
              7
            </td>
            <td
              class="
            TableQL-td
            
            "
            >
              Luke Skywalker has vanished.
In his absence, the sinister
FIRST ORDER has risen from
the ashes of the Empire
and will not rest until
Skywalker, the last Jedi,
has been destroyed.
 
With the support of the
REPUBLIC, General Leia Organa
leads a brave RESISTANCE.
She is desperate to find her
brother Luke and gain his
help in restoring peace and
justice to the galaxy.
 
Leia has sent her most daring
pilot on a secret mission
to Jakku, where an old ally
has discovered a clue to
Luke's whereabouts....
            </td>
            <td
              class="
            TableQL-td
            
            "
            >
              J. J. Abrams
            </td>
            <td
              class="
            TableQL-td
            
            "
            >
              Kathleen Kennedy, J. J. Abrams, Bryan Burk
            </td>
            <td
              class="
            TableQL-td
            
            "
            >
              2015-12-11
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </body>,
  "container": <div>
    <table
      class="TableQL"
    >
      <thead
        class="TableQL-thead"
      >
        <tr
          class="TableQL-tr"
        >
          <th
            class="TableQL-thead-th  "
          >
            Title
          </th>
          <th
            class="TableQL-thead-th  "
          >
            Episode ID
          </th>
          <th
            class="TableQL-thead-th  "
          >
            Opening Crawl
          </th>
          <th
            class="TableQL-thead-th  "
          >
            Director
          </th>
          <th
            class="TableQL-thead-th  "
          >
            Producer
          </th>
          <th
            class="TableQL-thead-th  "
          >
            Release Date
          </th>
        </tr>
      </thead>
      <tbody
        class="TableQL-tbody"
      >
        <tr
          class="TableQL-tr"
        >
          <td
            class="
            TableQL-td
            
            "
          >
            A New Hope
          </td>
          <td
            class="
            TableQL-td
            
            "
          >
            4
          </td>
          <td
            class="
            TableQL-td
            
            "
          >
            It is a period of civil war.
Rebel spaceships, striking
from a hidden base, have won
their first victory against
the evil Galactic Empire.

During the battle, Rebel
spies managed to steal secret
plans to the Empire's
ultimate weapon, the DEATH
STAR, an armored space
station with enough power
to destroy an entire planet.

Pursued by the Empire's
sinister agents, Princess
Leia races home aboard her
starship, custodian of the
stolen plans that can save her
people and restore
freedom to the galaxy....
          </td>
          <td
            class="
            TableQL-td
            
            "
          >
            George Lucas
          </td>
          <td
            class="
            TableQL-td
            
            "
          >
            Gary Kurtz, Rick McCallum
          </td>
          <td
            class="
            TableQL-td
            
            "
          >
            1977-05-25
          </td>
        </tr>
        <tr
          class="TableQL-tr"
        >
          <td
            class="
            TableQL-td
            
            "
          >
            Attack of the Clones
          </td>
          <td
            class="
            TableQL-td
            
            "
          >
            2
          </td>
          <td
            class="
            TableQL-td
            
            "
          >
            There is unrest in the Galactic
Senate. Several thousand solar
systems have declared their
intentions to leave the Republic.

This separatist movement,
under the leadership of the
mysterious Count Dooku, has
made it difficult for the limited
number of Jedi Knights to maintain 
peace and order in the galaxy.

Senator Amidala, the former
Queen of Naboo, is returning
to the Galactic Senate to vote
on the critical issue of creating
an ARMY OF THE REPUBLIC
to assist the overwhelmed
Jedi....
          </td>
          <td
            class="
            TableQL-td
            
            "
          >
            George Lucas
          </td>
          <td
            class="
            TableQL-td
            
            "
          >
            Rick McCallum
          </td>
          <td
            class="
            TableQL-td
            
            "
          >
            2002-05-16
          </td>
        </tr>
        <tr
          class="TableQL-tr"
        >
          <td
            class="
            TableQL-td
            
            "
          >
            The Phantom Menace
          </td>
          <td
            class="
            TableQL-td
            
            "
          >
            1
          </td>
          <td
            class="
            TableQL-td
            
            "
          >
            Turmoil has engulfed the
Galactic Republic. The taxation
of trade routes to outlying star
systems is in dispute.

Hoping to resolve the matter
with a blockade of deadly
battleships, the greedy Trade
Federation has stopped all
shipping to the small planet
of Naboo.

While the Congress of the
Republic endlessly debates
this alarming chain of events,
the Supreme Chancellor has
secretly dispatched two Jedi
Knights, the guardians of
peace and justice in the
galaxy, to settle the conflict....
          </td>
          <td
            class="
            TableQL-td
            
            "
          >
            George Lucas
          </td>
          <td
            class="
            TableQL-td
            
            "
          >
            Rick McCallum
          </td>
          <td
            class="
            TableQL-td
            
            "
          >
            1999-05-19
          </td>
        </tr>
        <tr
          class="TableQL-tr"
        >
          <td
            class="
            TableQL-td
            
            "
          >
            Revenge of the Sith
          </td>
          <td
            class="
            TableQL-td
            
            "
          >
            3
          </td>
          <td
            class="
            TableQL-td
            
            "
          >
            War! The Republic is crumbling
under attacks by the ruthless
Sith Lord, Count Dooku.
There are heroes on both sides.
Evil is everywhere.

In a stunning move, the
fiendish droid leader, General
Grievous, has swept into the
Republic capital and kidnapped
Chancellor Palpatine, leader of
the Galactic Senate.

As the Separatist Droid Army
attempts to flee the besieged
capital with their valuable
hostage, two Jedi Knights lead a
desperate mission to rescue the
captive Chancellor....
          </td>
          <td
            class="
            TableQL-td
            
            "
          >
            George Lucas
          </td>
          <td
            class="
            TableQL-td
            
            "
          >
            Rick McCallum
          </td>
          <td
            class="
            TableQL-td
            
            "
          >
            2005-05-19
          </td>
        </tr>
        <tr
          class="TableQL-tr"
        >
          <td
            class="
            TableQL-td
            
            "
          >
            Return of the Jedi
          </td>
          <td
            class="
            TableQL-td
            
            "
          >
            6
          </td>
          <td
            class="
            TableQL-td
            
            "
          >
            Luke Skywalker has returned to
his home planet of Tatooine in
an attempt to rescue his
friend Han Solo from the
clutches of the vile gangster
Jabba the Hutt.

Little does Luke know that the
GALACTIC EMPIRE has secretly
begun construction on a new
armored space station even
more powerful than the first
dreaded Death Star.

When completed, this ultimate
weapon will spell certain doom
for the small band of rebels
struggling to restore freedom
to the galaxy...
          </td>
          <td
            class="
            TableQL-td
            
            "
          >
            Richard Marquand
          </td>
          <td
            class="
            TableQL-td
            
            "
          >
            Howard G. Kazanjian, George Lucas, Rick McCallum
          </td>
          <td
            class="
            TableQL-td
            
            "
          >
            1983-05-25
          </td>
        </tr>
        <tr
          class="TableQL-tr"
        >
          <td
            class="
            TableQL-td
            
            "
          >
            The Empire Strikes Back
          </td>
          <td
            class="
            TableQL-td
            
            "
          >
            5
          </td>
          <td
            class="
            TableQL-td
            
            "
          >
            It is a dark time for the
Rebellion. Although the Death
Star has been destroyed,
Imperial troops have driven the
Rebel forces from their hidden
base and pursued them across
the galaxy.

Evading the dreaded Imperial
Starfleet, a group of freedom
fighters led by Luke Skywalker
has established a new secret
base on the remote ice world
of Hoth.

The evil lord Darth Vader,
obsessed with finding young
Skywalker, has dispatched
thousands of remote probes into
the far reaches of space....
          </td>
          <td
            class="
            TableQL-td
            
            "
          >
            Irvin Kershner
          </td>
          <td
            class="
            TableQL-td
            
            "
          >
            Gary Kurtz, Rick McCallum
          </td>
          <td
            class="
            TableQL-td
            
            "
          >
            1980-05-17
          </td>
        </tr>
        <tr
          class="TableQL-tr"
        >
          <td
            class="
            TableQL-td
            
            "
          >
            The Force Awakens
          </td>
          <td
            class="
            TableQL-td
            
            "
          >
            7
          </td>
          <td
            class="
            TableQL-td
            
            "
          >
            Luke Skywalker has vanished.
In his absence, the sinister
FIRST ORDER has risen from
the ashes of the Empire
and will not rest until
Skywalker, the last Jedi,
has been destroyed.
 
With the support of the
REPUBLIC, General Leia Organa
leads a brave RESISTANCE.
She is desperate to find her
brother Luke and gain his
help in restoring peace and
justice to the galaxy.
 
Leia has sent her most daring
pilot on a secret mission
to Jakku, where an old ally
has discovered a clue to
Luke's whereabouts....
          </td>
          <td
            class="
            TableQL-td
            
            "
          >
            J. J. Abrams
          </td>
          <td
            class="
            TableQL-td
            
            "
          >
            Kathleen Kennedy, J. J. Abrams, Bryan Burk
          </td>
          <td
            class="
            TableQL-td
            
            "
          >
            2015-12-11
          </td>
        </tr>
      </tbody>
    </table>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<TableQL> error 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <p>
        Error while loading TableQL: You have an Error mate!
      </p>
    </div>
  </body>,
  "container": <div>
    <p>
      Error while loading TableQL: You have an Error mate!
    </p>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<TableQL> loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <p>
        Loading...
      </p>
    </div>
  </body>,
  "container": <div>
    <p>
      Loading...
    </p>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<TableQL> no data found 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <p>
        No data found!
      </p>
    </div>
  </body>,
  "container": <div>
    <p>
      No data found!
    </p>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<TableQL> should have pagination 1`] = `
<table
  class="TableQL"
>
  <thead
    class="TableQL-thead"
  >
    <tr
      class="TableQL-tr"
    >
      <th
        class="TableQL-thead-th  "
      >
        Id
      </th>
      <th
        class="TableQL-thead-th  "
      >
        Name
      </th>
      <th
        class="TableQL-thead-th  "
      >
        Height
      </th>
      <th
        class="TableQL-thead-th  "
      >
        Mass
      </th>
      <th
        class="TableQL-thead-th  "
      >
        Hair Color
      </th>
      <th
        class="TableQL-thead-th  "
      >
        Skin Color
      </th>
      <th
        class="TableQL-thead-th  "
      >
        Eye Color
      </th>
      <th
        class="TableQL-thead-th  "
      >
        Birth Year
      </th>
      <th
        class="TableQL-thead-th  "
      >
        Gender
      </th>
    </tr>
  </thead>
  <tbody
    class="TableQL-tbody"
  >
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        cGVvcGxlOjE=
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Luke Skywalker
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        172
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        77
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        blond
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        fair
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        blue
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        19BBY
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        male
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        cGVvcGxlOjI=
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        C-3PO
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        167
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        75
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        n/a
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        gold
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        yellow
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        112BBY
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        n/a
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        cGVvcGxlOjM=
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        R2-D2
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        96
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        32
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        n/a
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        white, blue
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        red
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        33BBY
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        n/a
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        cGVvcGxlOjQ=
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Darth Vader
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        202
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        136
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        none
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        white
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        yellow
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        41.9BBY
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        male
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        cGVvcGxlOjU=
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Leia Organa
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        150
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        49
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        brown
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        light
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        brown
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        19BBY
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        female
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        cGVvcGxlOjY=
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Owen Lars
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        178
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        120
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        brown, grey
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        light
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        blue
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        52BBY
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        male
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        cGVvcGxlOjc=
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Beru Whitesun lars
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        165
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        75
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        brown
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        light
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        blue
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        47BBY
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        female
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        cGVvcGxlOjg=
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        R5-D4
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        97
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        32
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        n/a
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        white, red
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        red
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        unknown
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        n/a
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        cGVvcGxlOjk=
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Biggs Darklighter
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        183
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        84
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        black
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        light
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        brown
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        24BBY
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        male
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        cGVvcGxlOjEw
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Obi-Wan Kenobi
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        182
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        77
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        auburn, white
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        fair
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        blue-gray
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        57BBY
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        male
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableQL> should have pagination object 1`] = `
<table
  class="TableQL"
>
  <thead
    class="TableQL-thead"
  >
    <tr
      class="TableQL-tr"
    >
      <th
        class="TableQL-thead-th  "
      >
        Id
      </th>
      <th
        class="TableQL-thead-th  "
      >
        Name
      </th>
      <th
        class="TableQL-thead-th  "
      >
        Height
      </th>
      <th
        class="TableQL-thead-th  "
      >
        Mass
      </th>
      <th
        class="TableQL-thead-th  "
      >
        Hair Color
      </th>
      <th
        class="TableQL-thead-th  "
      >
        Skin Color
      </th>
      <th
        class="TableQL-thead-th  "
      >
        Eye Color
      </th>
      <th
        class="TableQL-thead-th  "
      >
        Birth Year
      </th>
      <th
        class="TableQL-thead-th  "
      >
        Gender
      </th>
    </tr>
  </thead>
  <tbody
    class="TableQL-tbody"
  >
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        cGVvcGxlOjEx
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Anakin Skywalker
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        188
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        84
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        blond
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        fair
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        blue
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        41.9BBY
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        male
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        cGVvcGxlOjEy
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Wilhuff Tarkin
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        180
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        null
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        auburn, grey
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        fair
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        blue
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        64BBY
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        male
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        cGVvcGxlOjEz
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Chewbacca
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        228
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        112
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        brown
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        unknown
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        blue
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        200BBY
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        male
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        cGVvcGxlOjE0
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Han Solo
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        180
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        80
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        brown
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        fair
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        brown
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        29BBY
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        male
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        cGVvcGxlOjE1
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Greedo
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        173
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        74
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        n/a
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        green
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        black
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        44BBY
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        male
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableQL> should not have pagination as there is not enough object/data/rows 1`] = `
<table
  class="TableQL"
>
  <thead
    class="TableQL-thead"
  >
    <tr
      class="TableQL-tr"
    >
      <th
        class="TableQL-thead-th  "
      >
        Title
      </th>
      <th
        class="TableQL-thead-th  "
      >
        Episode ID
      </th>
      <th
        class="TableQL-thead-th  "
      >
        Opening Crawl
      </th>
      <th
        class="TableQL-thead-th  "
      >
        Director
      </th>
      <th
        class="TableQL-thead-th  "
      >
        Producer
      </th>
      <th
        class="TableQL-thead-th  "
      >
        Release Date
      </th>
    </tr>
  </thead>
  <tbody
    class="TableQL-tbody"
  >
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        A New Hope
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        4
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        It is a period of civil war.
Rebel spaceships, striking
from a hidden base, have won
their first victory against
the evil Galactic Empire.

During the battle, Rebel
spies managed to steal secret
plans to the Empire's
ultimate weapon, the DEATH
STAR, an armored space
station with enough power
to destroy an entire planet.

Pursued by the Empire's
sinister agents, Princess
Leia races home aboard her
starship, custodian of the
stolen plans that can save her
people and restore
freedom to the galaxy....
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        George Lucas
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Gary Kurtz, Rick McCallum
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        1977-05-25
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        Attack of the Clones
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        2
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        There is unrest in the Galactic
Senate. Several thousand solar
systems have declared their
intentions to leave the Republic.

This separatist movement,
under the leadership of the
mysterious Count Dooku, has
made it difficult for the limited
number of Jedi Knights to maintain 
peace and order in the galaxy.

Senator Amidala, the former
Queen of Naboo, is returning
to the Galactic Senate to vote
on the critical issue of creating
an ARMY OF THE REPUBLIC
to assist the overwhelmed
Jedi....
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        George Lucas
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Rick McCallum
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        2002-05-16
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        The Phantom Menace
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        1
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Turmoil has engulfed the
Galactic Republic. The taxation
of trade routes to outlying star
systems is in dispute.

Hoping to resolve the matter
with a blockade of deadly
battleships, the greedy Trade
Federation has stopped all
shipping to the small planet
of Naboo.

While the Congress of the
Republic endlessly debates
this alarming chain of events,
the Supreme Chancellor has
secretly dispatched two Jedi
Knights, the guardians of
peace and justice in the
galaxy, to settle the conflict....
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        George Lucas
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Rick McCallum
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        1999-05-19
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        Revenge of the Sith
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        3
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        War! The Republic is crumbling
under attacks by the ruthless
Sith Lord, Count Dooku.
There are heroes on both sides.
Evil is everywhere.

In a stunning move, the
fiendish droid leader, General
Grievous, has swept into the
Republic capital and kidnapped
Chancellor Palpatine, leader of
the Galactic Senate.

As the Separatist Droid Army
attempts to flee the besieged
capital with their valuable
hostage, two Jedi Knights lead a
desperate mission to rescue the
captive Chancellor....
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        George Lucas
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Rick McCallum
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        2005-05-19
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        Return of the Jedi
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        6
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Luke Skywalker has returned to
his home planet of Tatooine in
an attempt to rescue his
friend Han Solo from the
clutches of the vile gangster
Jabba the Hutt.

Little does Luke know that the
GALACTIC EMPIRE has secretly
begun construction on a new
armored space station even
more powerful than the first
dreaded Death Star.

When completed, this ultimate
weapon will spell certain doom
for the small band of rebels
struggling to restore freedom
to the galaxy...
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Richard Marquand
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Howard G. Kazanjian, George Lucas, Rick McCallum
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        1983-05-25
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        The Empire Strikes Back
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        5
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        It is a dark time for the
Rebellion. Although the Death
Star has been destroyed,
Imperial troops have driven the
Rebel forces from their hidden
base and pursued them across
the galaxy.

Evading the dreaded Imperial
Starfleet, a group of freedom
fighters led by Luke Skywalker
has established a new secret
base on the remote ice world
of Hoth.

The evil lord Darth Vader,
obsessed with finding young
Skywalker, has dispatched
thousands of remote probes into
the far reaches of space....
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Irvin Kershner
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Gary Kurtz, Rick McCallum
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        1980-05-17
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        The Force Awakens
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        7
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Luke Skywalker has vanished.
In his absence, the sinister
FIRST ORDER has risen from
the ashes of the Empire
and will not rest until
Skywalker, the last Jedi,
has been destroyed.
 
With the support of the
REPUBLIC, General Leia Organa
leads a brave RESISTANCE.
She is desperate to find her
brother Luke and gain his
help in restoring peace and
justice to the galaxy.
 
Leia has sent her most daring
pilot on a secret mission
to Jakku, where an old ally
has discovered a clue to
Luke's whereabouts....
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        J. J. Abrams
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Kathleen Kennedy, J. J. Abrams, Bryan Burk
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        2015-12-11
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableQL> sort 1`] = `
<table
  class="TableQL"
>
  <thead
    class="TableQL-thead"
  >
    <tr
      class="TableQL-tr"
    >
      <th
        class="TableQL-thead-th  TableQL-thead-th-sort"
      >
        Title
      </th>
      <th
        class="TableQL-thead-th  TableQL-thead-th-sort"
      >
        Episode ID
      </th>
      <th
        class="TableQL-thead-th  TableQL-thead-th-sort"
      >
        Opening Crawl
      </th>
      <th
        class="TableQL-thead-th  TableQL-thead-th-sort"
      >
        Director
      </th>
      <th
        class="TableQL-thead-th  TableQL-thead-th-sort"
      >
        Producer
      </th>
      <th
        class="TableQL-thead-th  TableQL-thead-th-sort"
      >
        Release Date
      </th>
    </tr>
  </thead>
  <tbody
    class="TableQL-tbody"
  >
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        A New Hope
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        4
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        It is a period of civil war.
Rebel spaceships, striking
from a hidden base, have won
their first victory against
the evil Galactic Empire.

During the battle, Rebel
spies managed to steal secret
plans to the Empire's
ultimate weapon, the DEATH
STAR, an armored space
station with enough power
to destroy an entire planet.

Pursued by the Empire's
sinister agents, Princess
Leia races home aboard her
starship, custodian of the
stolen plans that can save her
people and restore
freedom to the galaxy....
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        George Lucas
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Gary Kurtz, Rick McCallum
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        1977-05-25
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        Attack of the Clones
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        2
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        There is unrest in the Galactic
Senate. Several thousand solar
systems have declared their
intentions to leave the Republic.

This separatist movement,
under the leadership of the
mysterious Count Dooku, has
made it difficult for the limited
number of Jedi Knights to maintain 
peace and order in the galaxy.

Senator Amidala, the former
Queen of Naboo, is returning
to the Galactic Senate to vote
on the critical issue of creating
an ARMY OF THE REPUBLIC
to assist the overwhelmed
Jedi....
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        George Lucas
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Rick McCallum
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        2002-05-16
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        The Phantom Menace
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        1
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Turmoil has engulfed the
Galactic Republic. The taxation
of trade routes to outlying star
systems is in dispute.

Hoping to resolve the matter
with a blockade of deadly
battleships, the greedy Trade
Federation has stopped all
shipping to the small planet
of Naboo.

While the Congress of the
Republic endlessly debates
this alarming chain of events,
the Supreme Chancellor has
secretly dispatched two Jedi
Knights, the guardians of
peace and justice in the
galaxy, to settle the conflict....
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        George Lucas
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Rick McCallum
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        1999-05-19
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        Revenge of the Sith
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        3
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        War! The Republic is crumbling
under attacks by the ruthless
Sith Lord, Count Dooku.
There are heroes on both sides.
Evil is everywhere.

In a stunning move, the
fiendish droid leader, General
Grievous, has swept into the
Republic capital and kidnapped
Chancellor Palpatine, leader of
the Galactic Senate.

As the Separatist Droid Army
attempts to flee the besieged
capital with their valuable
hostage, two Jedi Knights lead a
desperate mission to rescue the
captive Chancellor....
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        George Lucas
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Rick McCallum
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        2005-05-19
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        Return of the Jedi
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        6
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Luke Skywalker has returned to
his home planet of Tatooine in
an attempt to rescue his
friend Han Solo from the
clutches of the vile gangster
Jabba the Hutt.

Little does Luke know that the
GALACTIC EMPIRE has secretly
begun construction on a new
armored space station even
more powerful than the first
dreaded Death Star.

When completed, this ultimate
weapon will spell certain doom
for the small band of rebels
struggling to restore freedom
to the galaxy...
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Richard Marquand
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Howard G. Kazanjian, George Lucas, Rick McCallum
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        1983-05-25
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        The Empire Strikes Back
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        5
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        It is a dark time for the
Rebellion. Although the Death
Star has been destroyed,
Imperial troops have driven the
Rebel forces from their hidden
base and pursued them across
the galaxy.

Evading the dreaded Imperial
Starfleet, a group of freedom
fighters led by Luke Skywalker
has established a new secret
base on the remote ice world
of Hoth.

The evil lord Darth Vader,
obsessed with finding young
Skywalker, has dispatched
thousands of remote probes into
the far reaches of space....
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Irvin Kershner
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Gary Kurtz, Rick McCallum
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        1980-05-17
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        The Force Awakens
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        7
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Luke Skywalker has vanished.
In his absence, the sinister
FIRST ORDER has risen from
the ashes of the Empire
and will not rest until
Skywalker, the last Jedi,
has been destroyed.
 
With the support of the
REPUBLIC, General Leia Organa
leads a brave RESISTANCE.
She is desperate to find her
brother Luke and gain his
help in restoring peace and
justice to the galaxy.
 
Leia has sent her most daring
pilot on a secret mission
to Jakku, where an old ally
has discovered a clue to
Luke's whereabouts....
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        J. J. Abrams
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        Kathleen Kennedy, J. J. Abrams, Bryan Burk
      </td>
      <td
        class="
            TableQL-td
            
            "
      >
        2015-12-11
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableQL> sort and pagination 1`] = `
<table
  class="TableQL"
>
  <thead
    class="TableQL-thead"
  >
    <tr
      class="TableQL-tr"
    >
      <th
        class="TableQL-thead-th  TableQL-thead-th-sort"
      >
        Name
      </th>
    </tr>
  </thead>
  <tbody
    class="TableQL-tbody"
  >
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        Ackbar
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        Adi Gallia
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        Anakin Skywalker
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        Arvel Crynyd
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        Ayla Secura
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        BB8
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        Bail Prestor Organa
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        Barriss Offee
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        Ben Quadinaros
      </td>
    </tr>
    <tr
      class="TableQL-tr"
    >
      <td
        class="
            TableQL-td
            
            "
      >
        Beru Whitesun lars
      </td>
    </tr>
  </tbody>
</table>
`;
